--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         }
     },
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "scrutinizer/ocular": "^1.3"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.1"
     }
