--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bencavens/vine",
+    "name": "thinktomorrow/vine",
     "description": "Render a datatree structure",
     "type": "library",
     "license": "MIT",
