--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,8 @@
         }
     },
     "minimum-stability": "stable",
-    "require": {
-        "scrutinizer/ocular": "^1.3"
-    },
     "require-dev": {
+        "scrutinizer/ocular": "^1.3",
         "phpunit/phpunit": "^6.1"
     }
 }
