--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,8 @@
     "require-dev": {
         "scrutinizer/ocular": "^1.3",
         "phpunit/phpunit": "^6.1"
+    },
+    "require": {
+        "myclabs/deep-copy": "^1.6"
     }
 }
