--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,20 @@
 language: php
 
 php:
-  - 7.0
   - 7.1
+  - 7.2
 
 matrix:
   include:
-    - php: 7.0
+    - php: 7.1
+      env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
+    - php: 7.2
       env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
 
 before_script:
   - travis_retry composer self-update
   - travis_retry composer dump-autoload -o
-  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction
 
 script:
   - phpunit --coverage-text --coverage-clover=coverage.clover
