--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ language: php
 php:
   - 7.1
   - 7.2
+  - 7.3
 
 matrix:
   include:
     - php: 7.1
       env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
     - php: 7.2
+      env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
+    - php: 7.3
       env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
 
 before_script:
