--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4
 
 matrix:
   include:
@@ -12,6 +13,8 @@ matrix:
     - php: 7.2
       env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
     - php: 7.3
+      env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
+  -   php: 7.4
       env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
 
 before_script:
