--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     "minimum-stability": "stable",
     "require-dev": {
         "scrutinizer/ocular": "^1.3",
-        "phpunit/phpunit": "^6.1",
-        "phpstan/phpstan": "^0.10.5"
+        "phpunit/phpunit": "^9.5"
     },
     "require": {
         "php": ">=7.4"
