--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Ben Cavens",
-            "email": "ben@thinktomorrow.e"
+            "email": "ben@thinktomorrow.be"
         }
     ],
     "autoload":{
