--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,9 @@
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "scrutinizer/ocular": "^1.3",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "phpstan/phpstan": "^0.12.94"
     },
     "require": {
         "php": ">=7.4"
